style: Adjust padding in header to fix alignment issue

--- a/assets/base.css
+++ b/assets/base.css
@@ -153,17 +153,18 @@ body:has(.section-header .drawer-menu) .announcement-bar-section .page-width {
 
   .header.page-width,
   .utility-bar__grid.page-width {
-    padding: 2.2rem 3.2rem;
+    padding:0 3.2rem;
+  }
+
+  .header.page-width {
+        padding: 2.2rem 3.2rem;
+
   }
 @media screen and (min-width: 750px) {
   .page-width {
     padding: 0 5rem;
   }
 
-  .header.page-width,
-  .utility-bar__grid.page-width {
-    padding: 2.2rem 3.2rem;
-  }
 
   .page-width--narrow {
     padding: 0 9rem;
